# ooplab3

./: CMakeLists.txt  main.cpp
includes/: array.h  figure.h  hexagon.h  octagon.h  triangle.h
src/: array.cpp  figure.cpp  hexagon.cpp  octagon.cpp  triangle.cpp
tests/: tests.cpp
